Refactor and clean up unit tests:
- Remove unnecessary comments and redundant setup in tests.
- Standardize test method naming with a `test` prefix for better readability.
- Simplify and condense repetitive assertion sections.
- Update `FileProductAdapter` references to `ProductAdapter` after renaming.